<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buse_alkan_final.buse_alkan_final.h5190059_buse_alkan_final.activities.DetayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="137dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgKapak"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imgKapakBoyut"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/banner" />

            <TextView
                android:id="@+id/txtBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/detayBaslikTools"
                android:textColor="@color/logoRengi"
                android:textSize="@dimen/detayBaslikBoyut"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHayati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/hayatiBaslikTools"
                android:textColor="@color/logoRengi"
                android:textSize="@dimen/detayAltBaslikBoyut"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHayatIcrk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/hayatiAciklamaTools"
                android:textSize="@dimen/yaziAciklamaBoyut" />

            <TextView
                android:id="@+id/txtEdebi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/edebiKisiligiBaslikTools"
                android:textColor="@color/logoRengi"
                android:textSize="@dimen/detayAltBaslikBoyut"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEdebiIcrk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/edebiKisiligiAciklamaTools"
                android:textSize="@dimen/yaziAciklamaBoyut" />

            <TextView
                android:id="@+id/txtEser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/eserleriBaslikTools"
                android:textColor="@color/logoRengi"
                android:textSize="@dimen/detayAltBaslikBoyut"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEserIcrk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:paddingBottom="@dimen/padding"
                android:text="@string/eserleriAciklamaTools"
                android:textColor="@color/logoRengi"
                android:textSize="@dimen/yaziAciklamaBoyut"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>